--- a/_data/references.yml
+++ b/_data/references.yml
@@ -1,10 +1,10 @@
-- title: Python-Merge Sort
+- title: Java-Merge Sort
   page:
     - Intro_to_Java_Programming,_Comprehensive_Version_(10th_Edition)
   href:
     -
 
-    
+
 - title: Java-Quick Sort
   page:
     - Quicksort From Wikipedia, the free encyclopedia
