--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ github_username:  haokanga
 
 paginate: 10 # pagination basted on number of posts
 exclude: ["Gemfile", "Gemfile.lock", "README.md", 'sass', 'watch.sh', 'style.scss'] # files to exclude
-gems: [jekyll-paginate]
+gems: [jekyll-paginate, jekyll-gist]
 paginate: 10
 paginate_path: "page:num"
 
