--- a/_data/references.yml
+++ b/_data/references.yml
@@ -183,3 +183,9 @@
     - Java Puzzlers-Traps, Pitfalls, and Corner Cases By Joshua Bloch, Neal Gafter
   href:
     - https://www.amazon.com/Java-Puzzlers-Traps-Pitfalls-Corner/dp/032133678X
+
+- title: Java Pitfalls-Long Division & Silent Overflow
+  page:
+    - Java Puzzlers-Traps, Pitfalls, and Corner Cases By Joshua Bloch, Neal Gafter
+  href:
+    - https://www.amazon.com/Java-Puzzlers-Traps-Pitfalls-Corner/dp/032133678X
