2016-11-26-java-pitfalls-modulo-of-negative-int.md

--- a/_data/references.yml
+++ b/_data/references.yml
@@ -172,7 +172,7 @@
     - https://github.com/blog/2100-github-pages-now-faster-and-simpler-with-jekyll-3-0
 
 
-- title: Java Pitfalls-Modulo Of Negative Int
+- title: Java Pitfalls-Remainder Of Negative Int
   page:
     - Java Puzzlers-Traps, Pitfalls, and Corner Cases By Joshua Bloch, Neal Gafter
   href:
