--- a/_data/references.yml
+++ b/_data/references.yml
@@ -184,8 +184,10 @@
   href:
     - https://www.amazon.com/Java-Puzzlers-Traps-Pitfalls-Corner/dp/032133678X
 
-- title: Java Pitfalls-Long Division & Silent Overflow
+- title: Java Pitfalls-Silent Overflow & Explicit Casting
   page:
     - Java Puzzlers-Traps, Pitfalls, and Corner Cases By Joshua Bloch, Neal Gafter
+    - Nearly All Binary Searches and Mergesorts are Broken - Joshua Bloch in Google Research Blog
   href:
     - https://www.amazon.com/Java-Puzzlers-Traps-Pitfalls-Corner/dp/032133678X
+    - https://research.googleblog.com/2006/06/extra-extra-read-all-about-it-nearly.html
