--- a/_data/references.yml
+++ b/_data/references.yml
@@ -215,3 +215,9 @@
     - http://winterbe.com/posts/2014/07/31/java8-stream-tutorial-examples/
     - https://stackoverflow.com/questions/23860533/copy-a-stream-to-avoid-stream-has-already-been-operated-upon-or-closed-java-8
     - https://stackoverflow.com/questions/20129762/why-does-streamt-not-implement-iterablet
+
+- title: Java-Merge maps using Java streams
+  page:
+    - Preslav Rachev - Merging Multiple Maps Using Java 8 Streams
+  href:
+    - https://coderwall.com/p/oflatw/merging-multiple-maps-using-java-8-streams
